parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON programVer1
Rule 2     program -> PROGRAM ID SEMICOLON programVer2
Rule 3     program -> PROGRAM ID SEMICOLON programVer3
Rule 4     programVer1 -> variables functions principal
Rule 5     programVer2 -> variables principal
Rule 6     programVer2 -> functions principal
Rule 7     programVer3 -> principal
Rule 8     variables -> VARS varAux
Rule 9     varAux -> oneVar
Rule 10    varAux -> sameType
Rule 11    varAux -> newType
Rule 12    oneVar -> typeVar COLON identifierVar SEMICOLON
Rule 13    sameType -> typeVar COLON identifierVar COMA sameTypeFinal
Rule 14    sameType -> typeVar COLON identifierVar COMA sameTypeRecursive
Rule 15    sameTypeFinal -> identifierVar SEMICOLON
Rule 16    sameTypeRecursive -> identifierVar COMA sameTypeRecursive
Rule 17    sameTypeRecursive -> identifierVar COMA sameTypeFinal
Rule 18    sameTypeRecursive -> identifierVar SEMICOLON varAux
Rule 19    newType -> typeVar COLON identifierVar SEMICOLON varAux
Rule 20    functions -> funcAux
Rule 21    functions -> recursiveFunc
Rule 22    recursiveFunc -> funcAux functions
Rule 23    funcAux -> FUNCTION typeFunction ID LPAREN withParameters
Rule 24    funcAux -> FUNCTION typeFunction ID emptyPar funcVer1
Rule 25    funcAux -> FUNCTION typeFunction ID emptyPar funcVer2
Rule 26    emptyPar -> LPAREN RPAREN
Rule 27    typeFunction -> INT
Rule 28    typeFunction -> FLOAT
Rule 29    typeFunction -> CHAR
Rule 30    typeFunction -> VOID
Rule 31    withParameters -> parameters RPAREN funcVer1
Rule 32    withParameters -> parameters RPAREN funcVer2
Rule 33    funcVer1 -> variablesLoc block
Rule 34    funcVer2 -> block
Rule 35    variablesLoc -> VARS varAuxLoc
Rule 36    varAuxLoc -> oneVarLoc
Rule 37    varAuxLoc -> sameTypeLoc
Rule 38    varAuxLoc -> newTypeLoc
Rule 39    oneVarLoc -> typeVar COLON identifier SEMICOLON
Rule 40    sameTypeLoc -> typeVar COLON identifier COMA sameTypeFinalLoc
Rule 41    sameTypeLoc -> typeVar COLON identifier COMA sameTypeRecursiveLoc
Rule 42    sameTypeFinalLoc -> identifier SEMICOLON
Rule 43    sameTypeRecursiveLoc -> identifier COMA sameTypeRecursiveLoc
Rule 44    sameTypeRecursiveLoc -> identifier COMA sameTypeFinalLoc
Rule 45    sameTypeRecursiveLoc -> identifier SEMICOLON varAuxLoc
Rule 46    newTypeLoc -> typeVar COLON identifier SEMICOLON varAuxLoc
Rule 47    parameters -> oneParam
Rule 48    parameters -> sameTypeParam
Rule 49    parameters -> newParam
Rule 50    oneParam -> typeVar COLON identifierVar
Rule 51    sameTypeParam -> typeVar COLON identifierVar COMA sameTypeParamFinal
Rule 52    sameTypeParam -> typeVar COLON identifierVar COMA sameTypeParamRecursive
Rule 53    sameTypeParamFinal -> identifierVar
Rule 54    sameTypeParamRecursive -> identifierVar COMA sameTypeParamRecursive
Rule 55    sameTypeParamRecursive -> identifierVar COMA sameTypeParamFinal
Rule 56    sameTypeParamRecursive -> identifierVar SEMICOLON parameters
Rule 57    newParam -> typeVar COLON identifierVar SEMICOLON parameters
Rule 58    identifierVar -> identLonely
Rule 59    identifierVar -> identArrayVar
Rule 60    identArrayVar -> ID LSBRACK expressionVar RSBRACK
Rule 61    typeVar -> INT
Rule 62    typeVar -> FLOAT
Rule 63    typeVar -> CHAR
Rule 64    principal -> MAIN LPAREN RPAREN block
Rule 65    block -> LBRACK blockAux
Rule 66    blockAux -> statute RBRACK
Rule 67    blockAux -> blockRecursive
Rule 68    blockAux -> blockFinal
Rule 69    blockFinal -> RBRACK
Rule 70    blockRecursive -> statute blockAux
Rule 71    statute -> assignment SEMICOLON
Rule 72    statute -> ifStatement
Rule 73    statute -> writing SEMICOLON
Rule 74    statute -> reading SEMICOLON
Rule 75    statute -> loop
Rule 76    statute -> functionCall SEMICOLON
Rule 77    statute -> returnStatement SEMICOLON
Rule 78    statute -> regressionFunc SEMICOLON
Rule 79    statute -> plotXYFunc SEMICOLON
Rule 80    assignment -> identifier ASSIGN expression
Rule 81    returnStatement -> RETURN LPAREN expression RPAREN
Rule 82    ifStatement -> shortCondition
Rule 83    ifStatement -> longCondition
Rule 84    shortCondition -> IF LPAREN expression RPAREN THEN block
Rule 85    longCondition -> IF LPAREN expression RPAREN THEN block ELSE block
Rule 86    plotXYFunc -> PLOTXY LPAREN ID COMA ID RPAREN
Rule 87    regressionFunc -> REGRESSION LPAREN ID COMA ID RPAREN
Rule 88    writing -> WRITE LPAREN writingAux
Rule 89    writingAux -> writingFinal
Rule 90    writingAux -> writingRecursive
Rule 91    writingFinal -> writingString RPAREN
Rule 92    writingFinal -> expression RPAREN
Rule 93    writingString -> CTE_STRING
Rule 94    writingRecursive -> writingString COMA writingFinal
Rule 95    writingRecursive -> expression COMA writingFinal
Rule 96    writingRecursive -> writingString COMA writingRecursive
Rule 97    writingRecursive -> expression COMA writingRecursive
Rule 98    reading -> READ LPAREN readingAux
Rule 99    readingAux -> readingFinal
Rule 100   readingAux -> readingRecursive
Rule 101   readingFinal -> identifier RPAREN
Rule 102   readingRecursive -> identifier COMA readingRecursive
Rule 103   readingRecursive -> identifier COMA readingFinal
Rule 104   loop -> conditional
Rule 105   loop -> nonconditional
Rule 106   conditional -> WHILE LPAREN expression RPAREN block
Rule 107   nonconditional -> FOR assignment TO expression DO block
Rule 108   functionCall -> ID LPAREN callAux
Rule 109   callAux -> expression RPAREN
Rule 110   callAux -> callRecursive
Rule 111   callAux -> callFinal
Rule 112   callRecursive -> expression COMA callAux
Rule 113   callFinal -> RPAREN
Rule 114   expression -> term
Rule 115   expression -> expressionOperation
Rule 116   expressionOperation -> term PLUS expression
Rule 117   expressionOperation -> term MINUS expression
Rule 118   term -> factor
Rule 119   term -> termOperation
Rule 120   termOperation -> factor TIMES term
Rule 121   termOperation -> factor DIVIDE term
Rule 122   factor -> idioms
Rule 123   factor -> factorOperation
Rule 124   factorOperation -> idioms GTHAN factor
Rule 125   factorOperation -> idioms LTHAN factor
Rule 126   factorOperation -> idioms EQUAL factor
Rule 127   factorOperation -> idioms DIFF factor
Rule 128   idioms -> auction
Rule 129   idioms -> idiomsOperation
Rule 130   idiomsOperation -> auction OR idioms
Rule 131   idiomsOperation -> auction AND idioms
Rule 132   auction -> constant
Rule 133   auction -> otherExpression
Rule 134   auction -> identifier
Rule 135   auction -> averageFunc
Rule 136   auction -> modeFunc
Rule 137   auction -> varianceFunc
Rule 138   auction -> functionCall
Rule 139   constant -> someInt
Rule 140   constant -> someFloat
Rule 141   constant -> someChar
Rule 142   someInt -> CTE_INT
Rule 143   someFloat -> CTE_FLOAT
Rule 144   someChar -> CTE_CHAR
Rule 145   otherExpression -> LPAREN expression RPAREN
Rule 146   identifier -> identLonely
Rule 147   identifier -> identArray
Rule 148   identLonely -> ID
Rule 149   identArray -> ID LSBRACK expression RSBRACK
Rule 150   averageFunc -> AVERAGE LPAREN ID RPAREN
Rule 151   modeFunc -> MODE LPAREN ID RPAREN
Rule 152   varianceFunc -> VARIANCE LPAREN ID RPAREN
Rule 153   expressionVar -> termVar
Rule 154   expressionVar -> expressionOperationVar
Rule 155   expressionOperationVar -> termVar PLUS expressionVar
Rule 156   expressionOperationVar -> termVar MINUS expressionVar
Rule 157   termVar -> auctionVar
Rule 158   termVar -> termOperationVar
Rule 159   termOperationVar -> auctionVar TIMES termVar
Rule 160   termOperationVar -> auctionVar DIVIDE termVar
Rule 161   auctionVar -> constantVar
Rule 162   auctionVar -> otherExpressionVar
Rule 163   constantVar -> CTE_INT
Rule 164   otherExpressionVar -> LPAREN expressionVar RPAREN

Terminals, with rules where they appear

AND                  : 131
ASSIGN               : 80
AVERAGE              : 150
CHAR                 : 29 63
COLON                : 12 13 14 19 39 40 41 46 50 51 52 57
COMA                 : 13 14 16 17 40 41 43 44 51 52 54 55 86 87 94 95 96 97 102 103 112
CTE_CHAR             : 144
CTE_FLOAT            : 143
CTE_INT              : 142 163
CTE_STRING           : 93
DIFF                 : 127
DIVIDE               : 121 160
DO                   : 107
ELSE                 : 85
EQUAL                : 126
FLOAT                : 28 62
FOR                  : 107
FUNCTION             : 23 24 25
GTHAN                : 124
ID                   : 1 2 3 23 24 25 60 86 86 87 87 108 148 149 150 151 152
IF                   : 84 85
INT                  : 27 61
LBRACK               : 65
LPAREN               : 23 26 64 81 84 85 86 87 88 98 106 108 145 150 151 152 164
LSBRACK              : 60 149
LTHAN                : 125
MAIN                 : 64
MINUS                : 117 156
MODE                 : 151
OR                   : 130
PLOTXY               : 86
PLUS                 : 116 155
PROGRAM              : 1 2 3
RBRACK               : 66 69
READ                 : 98
REGRESSION           : 87
RETURN               : 81
RPAREN               : 26 31 32 64 81 84 85 86 87 91 92 101 106 109 113 145 150 151 152 164
RSBRACK              : 60 149
SEMICOLON            : 1 2 3 12 15 18 19 39 42 45 46 56 57 71 73 74 76 77 78 79
THEN                 : 84 85
TIMES                : 120 159
TO                   : 107
VARIANCE             : 152
VARS                 : 8 35
VOID                 : 30
WHILE                : 106
WRITE                : 88
error                : 

Nonterminals, with rules where they appear

assignment           : 71 107
auction              : 128 130 131
auctionVar           : 157 159 160
averageFunc          : 135
block                : 33 34 64 84 85 85 106 107
blockAux             : 65 70
blockFinal           : 68
blockRecursive       : 67
callAux              : 108 112
callFinal            : 111
callRecursive        : 110
conditional          : 104
constant             : 132
constantVar          : 161
emptyPar             : 24 25
expression           : 80 81 84 85 92 95 97 106 107 109 112 116 117 145 149
expressionOperation  : 115
expressionOperationVar : 154
expressionVar        : 60 155 156 164
factor               : 118 120 121 124 125 126 127
factorOperation      : 123
funcAux              : 20 22
funcVer1             : 24 31
funcVer2             : 25 32
functionCall         : 76 138
functions            : 4 6 22
identArray           : 147
identArrayVar        : 59
identLonely          : 58 146
identifier           : 39 40 41 42 43 44 45 46 80 101 102 103 134
identifierVar        : 12 13 14 15 16 17 18 19 50 51 52 53 54 55 56 57
idioms               : 122 124 125 126 127 130 131
idiomsOperation      : 129
ifStatement          : 72
longCondition        : 83
loop                 : 75
modeFunc             : 136
newParam             : 49
newType              : 11
newTypeLoc           : 38
nonconditional       : 105
oneParam             : 47
oneVar               : 9
oneVarLoc            : 36
otherExpression      : 133
otherExpressionVar   : 162
parameters           : 31 32 56 57
plotXYFunc           : 79
principal            : 4 5 6 7
program              : 0
programVer1          : 1
programVer2          : 2
programVer3          : 3
reading              : 74
readingAux           : 98
readingFinal         : 99 103
readingRecursive     : 100 102
recursiveFunc        : 21
regressionFunc       : 78
returnStatement      : 77
sameType             : 10
sameTypeFinal        : 13 17
sameTypeFinalLoc     : 40 44
sameTypeLoc          : 37
sameTypeParam        : 48
sameTypeParamFinal   : 51 55
sameTypeParamRecursive : 52 54
sameTypeRecursive    : 14 16
sameTypeRecursiveLoc : 41 43
shortCondition       : 82
someChar             : 141
someFloat            : 140
someInt              : 139
statute              : 66 70
term                 : 114 116 117 120 121
termOperation        : 119
termOperationVar     : 158
termVar              : 153 155 156 159 160
typeFunction         : 23 24 25
typeVar              : 12 13 14 19 39 40 41 46 50 51 52 57
varAux               : 8 18 19
varAuxLoc            : 35 45 46
variables            : 4 5
variablesLoc         : 33
varianceFunc         : 137
withParameters       : 23
writing              : 73
writingAux           : 88
writingFinal         : 89 94 95
writingRecursive     : 90 96 97
writingString        : 91 94 96

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON programVer1
    (2) program -> . PROGRAM ID SEMICOLON programVer2
    (3) program -> . PROGRAM ID SEMICOLON programVer3

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON programVer1
    (2) program -> PROGRAM . ID SEMICOLON programVer2
    (3) program -> PROGRAM . ID SEMICOLON programVer3

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON programVer1
    (2) program -> PROGRAM ID . SEMICOLON programVer2
    (3) program -> PROGRAM ID . SEMICOLON programVer3

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . programVer1
    (2) program -> PROGRAM ID SEMICOLON . programVer2
    (3) program -> PROGRAM ID SEMICOLON . programVer3
    (4) programVer1 -> . variables functions principal
    (5) programVer2 -> . variables principal
    (6) programVer2 -> . functions principal
    (7) programVer3 -> . principal
    (8) variables -> . VARS varAux
    (20) functions -> . funcAux
    (21) functions -> . recursiveFunc
    (64) principal -> . MAIN LPAREN RPAREN block
    (23) funcAux -> . FUNCTION typeFunction ID LPAREN withParameters
    (24) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer1
    (25) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer2
    (22) recursiveFunc -> . funcAux functions

    VARS            shift and go to state 11
    MAIN            shift and go to state 14
    FUNCTION        shift and go to state 15

    programVer1                    shift and go to state 5
    programVer2                    shift and go to state 6
    programVer3                    shift and go to state 7
    variables                      shift and go to state 8
    functions                      shift and go to state 9
    principal                      shift and go to state 10
    funcAux                        shift and go to state 12
    recursiveFunc                  shift and go to state 13

state 5

    (1) program -> PROGRAM ID SEMICOLON programVer1 .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON programVer1 .)


state 6

    (2) program -> PROGRAM ID SEMICOLON programVer2 .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON programVer2 .)


state 7

    (3) program -> PROGRAM ID SEMICOLON programVer3 .

    $end            reduce using rule 3 (program -> PROGRAM ID SEMICOLON programVer3 .)


state 8

    (4) programVer1 -> variables . functions principal
    (5) programVer2 -> variables . principal
    (20) functions -> . funcAux
    (21) functions -> . recursiveFunc
    (64) principal -> . MAIN LPAREN RPAREN block
    (23) funcAux -> . FUNCTION typeFunction ID LPAREN withParameters
    (24) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer1
    (25) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer2
    (22) recursiveFunc -> . funcAux functions

    MAIN            shift and go to state 14
    FUNCTION        shift and go to state 15

    functions                      shift and go to state 16
    principal                      shift and go to state 17
    funcAux                        shift and go to state 12
    recursiveFunc                  shift and go to state 13

state 9

    (6) programVer2 -> functions . principal
    (64) principal -> . MAIN LPAREN RPAREN block

    MAIN            shift and go to state 14

    principal                      shift and go to state 18

state 10

    (7) programVer3 -> principal .

    $end            reduce using rule 7 (programVer3 -> principal .)


state 11

    (8) variables -> VARS . varAux
    (9) varAux -> . oneVar
    (10) varAux -> . sameType
    (11) varAux -> . newType
    (12) oneVar -> . typeVar COLON identifierVar SEMICOLON
    (13) sameType -> . typeVar COLON identifierVar COMA sameTypeFinal
    (14) sameType -> . typeVar COLON identifierVar COMA sameTypeRecursive
    (19) newType -> . typeVar COLON identifierVar SEMICOLON varAux
    (61) typeVar -> . INT
    (62) typeVar -> . FLOAT
    (63) typeVar -> . CHAR

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26

    varAux                         shift and go to state 19
    oneVar                         shift and go to state 20
    sameType                       shift and go to state 21
    newType                        shift and go to state 22
    typeVar                        shift and go to state 23

state 12

    (20) functions -> funcAux .
    (22) recursiveFunc -> funcAux . functions
    (20) functions -> . funcAux
    (21) functions -> . recursiveFunc
    (23) funcAux -> . FUNCTION typeFunction ID LPAREN withParameters
    (24) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer1
    (25) funcAux -> . FUNCTION typeFunction ID emptyPar funcVer2
    (22) recursiveFunc -> . funcAux functions

    MAIN            reduce using rule 20 (functions -> funcAux .)
    FUNCTION        shift and go to state 15

    funcAux                        shift and go to state 12
    functions                      shift and go to state 27
    recursiveFunc                  shift and go to state 13

state 13

    (21) functions -> recursiveFunc .

    MAIN            reduce using rule 21 (functions -> recursiveFunc .)


state 14

    (64) principal -> MAIN . LPAREN RPAREN block

    LPAREN          shift and go to state 28


state 15

    (23) funcAux -> FUNCTION . typeFunction ID LPAREN withParameters
    (24) funcAux -> FUNCTION . typeFunction ID emptyPar funcVer1
    (25) funcAux -> FUNCTION . typeFunction ID emptyPar funcVer2
    (27) typeFunction -> . INT
    (28) typeFunction -> . FLOAT
    (29) typeFunction -> . CHAR
    (30) typeFunction -> . VOID

    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    CHAR            shift and go to state 32
    VOID            shift and go to state 33

    typeFunction                   shift and go to state 29

state 16

    (4) programVer1 -> variables functions . principal
    (64) principal -> . MAIN LPAREN RPAREN block

    MAIN            shift and go to state 14

    principal                      shift and go to state 34

state 17

    (5) programVer2 -> variables principal .

    $end            reduce using rule 5 (programVer2 -> variables principal .)


state 18

    (6) programVer2 -> functions principal .

    $end            reduce using rule 6 (programVer2 -> functions principal .)


state 19

    (8) variables -> VARS varAux .

    MAIN            reduce using rule 8 (variables -> VARS varAux .)
    FUNCTION        reduce using rule 8 (variables -> VARS varAux .)


state 20

    (9) varAux -> oneVar .

    MAIN            reduce using rule 9 (varAux -> oneVar .)
    FUNCTION        reduce using rule 9 (varAux -> oneVar .)


state 21

    (10) varAux -> sameType .

    MAIN            reduce using rule 10 (varAux -> sameType .)
    FUNCTION        reduce using rule 10 (varAux -> sameType .)


state 22

    (11) varAux -> newType .

    MAIN            reduce using rule 11 (varAux -> newType .)
    FUNCTION        reduce using rule 11 (varAux -> newType .)


state 23

    (12) oneVar -> typeVar . COLON identifierVar SEMICOLON
    (13) sameType -> typeVar . COLON identifierVar COMA sameTypeFinal
    (14) sameType -> typeVar . COLON identifierVar COMA sameTypeRecursive
    (19) newType -> typeVar . COLON identifierVar SEMICOLON varAux

    COLON           shift and go to state 35


state 24

    (61) typeVar -> INT .

    COLON           reduce using rule 61 (typeVar -> INT .)


state 25

    (62) typeVar -> FLOAT .

    COLON           reduce using rule 62 (typeVar -> FLOAT .)


state 26

    (63) typeVar -> CHAR .

    COLON           reduce using rule 63 (typeVar -> CHAR .)


state 27

    (22) recursiveFunc -> funcAux functions .

    MAIN            reduce using rule 22 (recursiveFunc -> funcAux functions .)


state 28

    (64) principal -> MAIN LPAREN . RPAREN block

    RPAREN          shift and go to state 36


state 29

    (23) funcAux -> FUNCTION typeFunction . ID LPAREN withParameters
    (24) funcAux -> FUNCTION typeFunction . ID emptyPar funcVer1
    (25) funcAux -> FUNCTION typeFunction . ID emptyPar funcVer2

    ID              shift and go to state 37


state 30

    (27) typeFunction -> INT .

    ID              reduce using rule 27 (typeFunction -> INT .)


state 31

    (28) typeFunction -> FLOAT .

    ID              reduce using rule 28 (typeFunction -> FLOAT .)


state 32

    (29) typeFunction -> CHAR .

    ID              reduce using rule 29 (typeFunction -> CHAR .)


state 33

    (30) typeFunction -> VOID .

    ID              reduce using rule 30 (typeFunction -> VOID .)


state 34

    (4) programVer1 -> variables functions principal .

    $end            reduce using rule 4 (programVer1 -> variables functions principal .)


state 35

    (12) oneVar -> typeVar COLON . identifierVar SEMICOLON
    (13) sameType -> typeVar COLON . identifierVar COMA sameTypeFinal
    (14) sameType -> typeVar COLON . identifierVar COMA sameTypeRecursive
    (19) newType -> typeVar COLON . identifierVar SEMICOLON varAux
    (58) identifierVar -> . identLonely
    (59) identifierVar -> . identArrayVar
    (148) identLonely -> . ID
    (60) identArrayVar -> . ID LSBRACK expressionVar RSBRACK

    ID              shift and go to state 41

    identifierVar                  shift and go to state 38
    identLonely                    shift and go to state 39
    identArrayVar                  shift and go to state 40

state 36

    (64) principal -> MAIN LPAREN RPAREN . block
    (65) block -> . LBRACK blockAux

    LBRACK          shift and go to state 43

    block                          shift and go to state 42

state 37

    (23) funcAux -> FUNCTION typeFunction ID . LPAREN withParameters
    (24) funcAux -> FUNCTION typeFunction ID . emptyPar funcVer1
    (25) funcAux -> FUNCTION typeFunction ID . emptyPar funcVer2
    (26) emptyPar -> . LPAREN RPAREN

    LPAREN          shift and go to state 44

    emptyPar                       shift and go to state 45

state 38

    (12) oneVar -> typeVar COLON identifierVar . SEMICOLON
    (13) sameType -> typeVar COLON identifierVar . COMA sameTypeFinal
    (14) sameType -> typeVar COLON identifierVar . COMA sameTypeRecursive
    (19) newType -> typeVar COLON identifierVar . SEMICOLON varAux

    SEMICOLON       shift and go to state 46
    COMA            shift and go to state 47


state 39

    (58) identifierVar -> identLonely .

    SEMICOLON       reduce using rule 58 (identifierVar -> identLonely .)
    COMA            reduce using rule 58 (identifierVar -> identLonely .)
    RPAREN          reduce using rule 58 (identifierVar -> identLonely .)


state 40

    (59) identifierVar -> identArrayVar .

    SEMICOLON       reduce using rule 59 (identifierVar -> identArrayVar .)
    COMA            reduce using rule 59 (identifierVar -> identArrayVar .)
    RPAREN          reduce using rule 59 (identifierVar -> identArrayVar .)


state 41

    (148) identLonely -> ID .
    (60) identArrayVar -> ID . LSBRACK expressionVar RSBRACK

    SEMICOLON       reduce using rule 148 (identLonely -> ID .)
    COMA            reduce using rule 148 (identLonely -> ID .)
    RPAREN          reduce using rule 148 (identLonely -> ID .)
    LSBRACK         shift and go to state 48


state 42

    (64) principal -> MAIN LPAREN RPAREN block .

    $end            reduce using rule 64 (principal -> MAIN LPAREN RPAREN block .)


state 43

    (65) block -> LBRACK . blockAux
    (66) blockAux -> . statute RBRACK
    (67) blockAux -> . blockRecursive
    (68) blockAux -> . blockFinal
    (71) statute -> . assignment SEMICOLON
    (72) statute -> . ifStatement
    (73) statute -> . writing SEMICOLON
    (74) statute -> . reading SEMICOLON
    (75) statute -> . loop
    (76) statute -> . functionCall SEMICOLON
    (77) statute -> . returnStatement SEMICOLON
    (78) statute -> . regressionFunc SEMICOLON
    (79) statute -> . plotXYFunc SEMICOLON
    (70) blockRecursive -> . statute blockAux
    (69) blockFinal -> . RBRACK
    (80) assignment -> . identifier ASSIGN expression
    (82) ifStatement -> . shortCondition
    (83) ifStatement -> . longCondition
    (88) writing -> . WRITE LPAREN writingAux
    (98) reading -> . READ LPAREN readingAux
    (104) loop -> . conditional
    (105) loop -> . nonconditional
    (108) functionCall -> . ID LPAREN callAux
    (81) returnStatement -> . RETURN LPAREN expression RPAREN
    (87) regressionFunc -> . REGRESSION LPAREN ID COMA ID RPAREN
    (86) plotXYFunc -> . PLOTXY LPAREN ID COMA ID RPAREN
    (146) identifier -> . identLonely
    (147) identifier -> . identArray
    (84) shortCondition -> . IF LPAREN expression RPAREN THEN block
    (85) longCondition -> . IF LPAREN expression RPAREN THEN block ELSE block
    (106) conditional -> . WHILE LPAREN expression RPAREN block
    (107) nonconditional -> . FOR assignment TO expression DO block
    (148) identLonely -> . ID
    (149) identArray -> . ID LSBRACK expression RSBRACK

    RBRACK          shift and go to state 51
    WRITE           shift and go to state 66
    READ            shift and go to state 67
    ID              shift and go to state 70
    RETURN          shift and go to state 71
    REGRESSION      shift and go to state 72
    PLOTXY          shift and go to state 73
    IF              shift and go to state 76
    WHILE           shift and go to state 77
    FOR             shift and go to state 78

    blockAux                       shift and go to state 49
    statute                        shift and go to state 50
    blockRecursive                 shift and go to state 52
    blockFinal                     shift and go to state 53
    assignment                     shift and go to state 54
    ifStatement                    shift and go to state 55
    writing                        shift and go to state 56
    reading                        shift and go to state 57
    loop                           shift and go to state 58
    functionCall                   shift and go to state 59
    returnStatement                shift and go to state 60
    regressionFunc                 shift and go to state 61
    plotXYFunc                     shift and go to state 62
    identifier                     shift and go to state 63
    shortCondition                 shift and go to state 64
    longCondition                  shift and go to state 65
    conditional                    shift and go to state 68
    nonconditional                 shift and go to state 69
    identLonely                    shift and go to state 74
    identArray                     shift and go to state 75

state 44

    (23) funcAux -> FUNCTION typeFunction ID LPAREN . withParameters
    (26) emptyPar -> LPAREN . RPAREN
    (31) withParameters -> . parameters RPAREN funcVer1
    (32) withParameters -> . parameters RPAREN funcVer2
    (47) parameters -> . oneParam
    (48) parameters -> . sameTypeParam
    (49) parameters -> . newParam
    (50) oneParam -> . typeVar COLON identifierVar
    (51) sameTypeParam -> . typeVar COLON identifierVar COMA sameTypeParamFinal
    (52) sameTypeParam -> . typeVar COLON identifierVar COMA sameTypeParamRecursive
    (57) newParam -> . typeVar COLON identifierVar SEMICOLON parameters
    (61) typeVar -> . INT
    (62) typeVar -> . FLOAT
    (63) typeVar -> . CHAR

    RPAREN          shift and go to state 80
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26

    withParameters                 shift and go to state 79
    parameters                     shift and go to state 81
    oneParam                       shift and go to state 82
    sameTypeParam                  shift and go to state 83
    newParam                       shift and go to state 84
    typeVar                        shift and go to state 85

state 45

    (24) funcAux -> FUNCTION typeFunction ID emptyPar . funcVer1
    (25) funcAux -> FUNCTION typeFunction ID emptyPar . funcVer2
    (33) funcVer1 -> . variablesLoc block
    (34) funcVer2 -> . block
    (35) variablesLoc -> . VARS varAuxLoc
    (65) block -> . LBRACK blockAux

    VARS            shift and go to state 90
    LBRACK          shift and go to state 43

    funcVer1                       shift and go to state 86
    funcVer2                       shift and go to state 87
    variablesLoc                   shift and go to state 88
    block                          shift and go to state 89

state 46

    (12) oneVar -> typeVar COLON identifierVar SEMICOLON .
    (19) newType -> typeVar COLON identifierVar SEMICOLON . varAux
    (9) varAux -> . oneVar
    (10) varAux -> . sameType
    (11) varAux -> . newType
    (12) oneVar -> . typeVar COLON identifierVar SEMICOLON
    (13) sameType -> . typeVar COLON identifierVar COMA sameTypeFinal
    (14) sameType -> . typeVar COLON identifierVar COMA sameTypeRecursive
    (19) newType -> . typeVar COLON identifierVar SEMICOLON varAux
    (61) typeVar -> . INT
    (62) typeVar -> . FLOAT
    (63) typeVar -> . CHAR

    MAIN            reduce using rule 12 (oneVar -> typeVar COLON identifierVar SEMICOLON .)
    FUNCTION        reduce using rule 12 (oneVar -> typeVar COLON identifierVar SEMICOLON .)
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26

    typeVar                        shift and go to state 23
    varAux                         shift and go to state 91
    oneVar                         shift and go to state 20
    sameType                       shift and go to state 21
    newType                        shift and go to state 22

state 47

    (13) sameType -> typeVar COLON identifierVar COMA . sameTypeFinal
    (14) sameType -> typeVar COLON identifierVar COMA . sameTypeRecursive
    (15) sameTypeFinal -> . identifierVar SEMICOLON
    (16) sameTypeRecursive -> . identifierVar COMA sameTypeRecursive
    (17) sameTypeRecursive -> . identifierVar COMA sameTypeFinal
    (18) sameTypeRecursive -> . identifierVar SEMICOLON varAux
    (58) identifierVar -> . identLonely
    (59) identifierVar -> . identArrayVar
    (148) identLonely -> . ID
    (60) identArrayVar -> . ID LSBRACK expressionVar RSBRACK

    ID              shift and go to state 41

    identifierVar                  shift and go to state 92
    sameTypeFinal                  shift and go to state 93
    sameTypeRecursive              shift and go to state 94
    identLonely                    shift and go to state 39
    identArrayVar                  shift and go to state 40

state 48

    (60) identArrayVar -> ID LSBRACK . expressionVar RSBRACK
    (153) expressionVar -> . termVar
    (154) expressionVar -> . expressionOperationVar
    (157) termVar -> . auctionVar
    (158) termVar -> . termOperationVar
    (155) expressionOperationVar -> . termVar PLUS expressionVar
    (156) expressionOperationVar -> . termVar MINUS expressionVar
    (161) auctionVar -> . constantVar
    (162) auctionVar -> . otherExpressionVar
    (159) termOperationVar -> . auctionVar TIMES termVar
    (160) termOperationVar -> . auctionVar DIVIDE termVar
    (163) constantVar -> . CTE_INT
    (164) otherExpressionVar -> . LPAREN expressionVar RPAREN

    CTE_INT         shift and go to state 102
    LPAREN          shift and go to state 103

    expressionVar                  shift and go to state 95
    termVar                        shift and go to state 96
    expressionOperationVar         shift and go to state 97
    auctionVar                     shift and go to state 98
    termOperationVar               shift and go to state 99
    constantVar                    shift and go to state 100
    otherExpressionVar             shift and go to state 101

state 49

    (65) block -> LBRACK blockAux .

    $end            reduce using rule 65 (block -> LBRACK blockAux .)
    FUNCTION        reduce using rule 65 (block -> LBRACK blockAux .)
    MAIN            reduce using rule 65 (block -> LBRACK blockAux .)
    RBRACK          reduce using rule 65 (block -> LBRACK blockAux .)
    WRITE           reduce using rule 65 (block -> LBRACK blockAux .)
    READ            reduce using rule 65 (block -> LBRACK blockAux .)
    ID              reduce using rule 65 (block -> LBRACK blockAux .)
    RETURN          reduce using rule 65 (block -> LBRACK blockAux .)
    REGRESSION      reduce using rule 65 (block -> LBRACK blockAux .)
    PLOTXY          reduce using rule 65 (block -> LBRACK blockAux .)
    IF              reduce using rule 65 (block -> LBRACK blockAux .)
    WHILE           reduce using rule 65 (block -> LBRACK blockAux .)
    FOR             reduce using rule 65 (block -> LBRACK blockAux .)
    ELSE            reduce using rule 65 (block -> LBRACK blockAux .)


state 50
